<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SignUpFrg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:maxWidth="460dp"
    android:padding="20dp"
    tools:context=".ui.main.fragments.FrSignUp">

    <TextView
        android:id="@+id/createAcH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_ac_h"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createAcP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lineSpacingExtra="8dp"
        android:text="@string/if_you_try_to_share_your_body_here_you_may_face_account_deletion_no_matter_how_pink_your_body_is"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAcH" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/askSignInC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAcP">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_user" />

        <TextView
            android:id="@+id/toSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingVertical="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/link" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sgEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/askSignInC"
        app:layout_constraintWidth_max="380dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_email"
            android:inputType="text"
            android:padding="15dp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sgPswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/sgEmail"
        app:layout_constraintWidth_max="380dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sgPswdV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/ent_pswd"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sgPswdCn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/sgPswd"
        app:layout_constraintWidth_max="380dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sgPswdCnV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/ent_con_pswd"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendOtpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:paddingHorizontal="10dp"
        android:text="@string/continue_t"
        android:textColor="@android:color/white"
        app:cornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sgPswdCn"
        app:rippleColor="@color/white" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/horiLine2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendOtpBtn"
        app:layout_constraintWidth_max="380dp">

        <View
            android:id="@+id/leftLine"
            android:layout_width="20dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/bdr" />

        <TextView
            android:id="@+id/orT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/or" />

        <View
            android:id="@+id/righLine"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/bdr" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cwGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/bdr"
        android:gravity="start|center_vertical"
        android:paddingHorizontal="10dp"
        android:text="@string/google"
        android:textColor="@android:color/black"
        app:cornerRadius="5dp"
        app:icon="@drawable/google"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horiLine2"
        app:rippleColor="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>