<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:maxWidth="460dp"
    android:paddingHorizontal="20dp"
    android:paddingBottom="15dp"
    tools:context=".ui.main.fragments.FrSignIn">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/sinLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/venjns_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/towardsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/we_will_bring_change_to_this_universe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sinLogo" />

    <TextView
        android:id="@+id/TheOneSt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/towardsTxt" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/askSignUpC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TheOneSt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user" />

        <TextView
            android:id="@+id/toSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingVertical="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/link" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lgUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/askSignUpC"
        app:layout_constraintWidth_max="380dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="15dp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lgPswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/lgUserName"
        app:layout_constraintWidth_max="380dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/ent_pswd"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/invalidCrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/warning"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lgPswd" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/loginForgotC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invalidCrd"
        app:layout_constraintWidth_max="380dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            app:cornerRadius="5dp"
            app:icon="@drawable/ic_login"
            app:rippleColor="@color/white"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/frgtPswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingVertical="10dp"
            android:text="@string/forgot_pswd"
            android:textColor="@color/link" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/horiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginForgotC"
        app:layout_constraintWidth_max="380dp">

        <View
            android:id="@+id/leftLine"
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/bdr" />

        <TextView
            android:id="@+id/orT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/or" />

        <View
            android:id="@+id/righLine"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/bdr" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cwGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/bdr"
        android:gravity="start|center_vertical"
        android:paddingHorizontal="10dp"
        android:text="@string/google"
        android:textColor="@android:color/black"
        app:cornerRadius="5dp"
        app:icon="@drawable/google"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horiLine"
        app:rippleColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
