<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verifyEmailLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxWidth="460dp"
    android:padding="20dp"
    tools:context=".ui.main.fragments.FrVerifyEmail">

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/backTosUFrgt"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_15"
        android:contentDescription="@string/next"
        android:foreground="@drawable/ripple_10"
        android:src="@drawable/ic_chev_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterOtpTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_otp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backTosUFrgt" />

    <TextView
        android:id="@+id/enterOtpPera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/otp_pera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterOtpTxt"
        tools:layout_editor_absoluteY="30dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/otpBoxC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:flow_horizontalGap="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterOtpPera">

        <EditText
            android:id="@+id/otpBox1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_15"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />

        <EditText
            android:id="@+id/otpBox2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_15"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />

        <EditText
            android:id="@+id/otpBox3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_15"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />

        <EditText
            android:id="@+id/otpBox4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_15"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />

        <EditText
            android:id="@+id/otpBox5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_15"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />

        <EditText
            android:id="@+id/otpBox6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_15"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/reqOTPc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpBoxC">

        <TextView
            android:id="@+id/reqOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_get_otp" />

        <TextView
            android:id="@+id/resendClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="2:50"
            android:textColor="@color/link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reqOTP" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendOtpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:paddingHorizontal="10dp"
        android:text="@string/verify"
        android:textColor="@android:color/white"
        app:cornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqOTPc"
        app:rippleColor="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>